# deep_lungs_torch

./: .gitignore  Dockerfile  create_volumes.py  download_datasets.sh  file_utils.py  gen_train_array.py  model.py  pyproject.toml  train.py
