[tool.poetry]
name = "deep_lungs_torch"
version = "0.1.0"
description = ""
authors = ["Thiago Franco de Moraes <totonixsame@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kaggle = "^1.5.12"
torch = "^1.12.1"
numpy = "^1.23.2"
tensorboard = "^2.10.0"
typing-extensions = "^4.3.0"
tqdm = "^4.64.0"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
